# turbo-bear

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: ast.rs  codegen.rs  grammar.pest  grammar.rs  lib.rs  main.rs
src/ast/: ast.rs  boolean.rs  error.rs  expression.rs  float.rs  identifier.rs  integer.rs  location.rs  mod.rs  program.rs  statement.rs
src/parser/: error.rs  grammar.pest  grammar.rs  mod.rs
src/test/: mod.rs
src/test/fixtures/: block.tb  return.tb  simple.tb
tests/: fixtures.rs
tests/fixtures/: block.tb  expression.tb  function_call.tb  function_declaration.tb  invalid_expression_statement.tb  invalid_identifiers.tb  variable-declaration.tb
tests/snapshots/: fixtures__fixture_tests_fixtures_block_tb.snap  fixtures__fixture_tests_fixtures_empty_tb.snap  fixtures__fixture_tests_fixtures_expression_tb.snap  fixtures__fixture_tests_fixtures_function_call_tb.snap  fixtures__fixture_tests_fixtures_function_declaration_tb.snap  fixtures__fixture_tests_fixtures_invalid_expression_statement_tb.snap  fixtures__fixture_tests_fixtures_invalid_identifiers_tb.snap  fixtures__fixture_tests_fixtures_invalid_return_top_level_tb.snap  fixtures__fixture_tests_fixtures_return_tb.snap  fixtures__fixture_tests_fixtures_variable_declaration_tb.snap  fixtures__parse_fixture_tests@block.tb.snap  fixtures__parse_fixture_tests@empty.tb.snap  fixtures__parse_fixture_tests@expression.tb.snap  fixtures__parse_fixture_tests@function_declaration.tb.snap  fixtures__parse_fixture_tests@return.tb.snap  fixtures__parse_fixture_tests@variable-declaration.tb.snap
(+7 files in other folders)
