[package]
name = "turbo-bear"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.9.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
lazy_static = "1.4"
pest = "2.1"
pest_derive = "2.1"

[dev-dependencies]
insta = { version = "1.8.0", features = ["glob"] }
test-generator = "0.3.0"
